Changed .prompt__labels to be human readable strs (plural noun instead of plural_noun). Fixed issue where spans could wrap across multiple lines.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -125,6 +125,7 @@ body {
   background-color: var(--color-accent);
   text-decoration: underline;
   box-shadow: var(--content-shadow);
+  text-wrap: nowrap;
 }
 
 /** Form components **/
