--- a/static/scss/partials/_components.scss
+++ b/static/scss/partials/_components.scss
@@ -24,6 +24,7 @@
         background-color: var(--color-accent);
         text-decoration: underline;
         box-shadow: var(--content-shadow);
+        text-wrap: nowrap;
     }
 }
 
